--- a/adminSettingsArea/src/index.html
+++ b/adminSettingsArea/src/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>WebPack Dev</title>
   </head>
   <body>
     <div id="adminRoot"></div>
